--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <html>
-  <head>
-    <meta charset="utf-8"/>
+
+<head>
+    <meta charset="utf-8" />
     <style>
-      body {
-        background: rgb(38, 38, 38);
-        text-align: center;
-      }
-      div.controls {
-        position: absolute;
-        width: 99%;
-        bottom: 10px;
-        left: auto;
-        right: auto;
-        color: white;
-        font-family: 'Montserrat', sans-serif;
-      }
-      canvas:focus {
-        outline: 4px solid rgb(65 139 117);
-      }
-      canvas:focus-visible {
-        outline: 4px solid rgb(65 139 117);
-      }
-      span.keys {
-        color: rgb(111, 188, 165);
-      }
+        body {
+            background: rgb(38, 38, 38);
+            text-align: center;
+        }
+
+        div.controls {
+            position: absolute;
+            width: 99%;
+            bottom: 10px;
+            left: auto;
+            right: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        canvas:focus {
+            outline: 4px solid rgb(65 139 117);
+        }
+
+        canvas:focus-visible {
+            outline: 4px solid rgb(65 139 117);
+        }
+
+        span.keys {
+            color: rgb(111, 188, 165);
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  </head>
-  <script>
+</head>
+<script>
     // From: https://github.com/NiklasEi/bevy_kira_audio
 
     // Insert hack to make sound autoplay on Chrome as soon as the user interacts with the tab:
@@ -85,6 +90,11 @@
                 userInputEventNames.forEach((eventName) => {
                     document.removeEventListener(eventName, resumeAllContexts);
                 });
+
+                // Force focus
+                let canvas = document.getElementsByTagName("canvas")[0];
+                canvas.focus();
+                canvas.onblur = function () { setTimeout(function () { canvas.focus(); }, 20); }
             }
         }
 
@@ -95,10 +105,12 @@
         });
     })();
 </script>
-  <script type="module">
+<script type="module">
     import init from './target/wasm.js'
     init()
-  </script>
-  <body>
-  </body>
+</script>
+
+<body>
+</body>
+
 </html>
