Fix html margin, remove unused bits

--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
         body {
             background: rgb(38, 38, 38);
             text-align: center;
+            margin: 0;
         }
 
-        div.controls {
-            position: absolute;
-            width: 99%;
-            bottom: 10px;
-            left: auto;
-            right: auto;
-            color: white;
-            font-family: 'Montserrat', sans-serif;
+        canvas {
+            margin: 4px;
         }
 
         canvas:focus {
@@ -30,9 +25,9 @@
             color: rgb(111, 188, 165);
         }
     </style>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> -->
 </head>
 <script>
     // From: https://github.com/NiklasEi/bevy_kira_audio
